Fix: --sticky-header-height starts in 0 to avoid .sticky elements jumping

--- a/src/sass/modulos/_header.sass
+++ b/src/sass/modulos/_header.sass
@@ -11,7 +11,6 @@
 		display: flex
 		align-items: center
 		justify-content: flex-end
-		transition: 500ms padding
 		gap: 10px
 
 	&__widgets
